[package]
name = "sendtar"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes","unstable"] }
hypercore-protocol = "0.3.0"
clap = "3.0.0-beta.2"
anyhow = "1.0.39"
interfaces = "0.0.6"
get_if_addrs = "0.5.3"
rand = "0.8.3"
hex = "0.4.3"
futures = "0.3.13"
env_logger = "0.8.3"
async-tar = "0.3.0"
serde = { version = "1.0.125", features = ["derive"] }
base32 = "0.4.0"
bincode = "1.3.2"
# serde_json = "1.0.64"
